experiments-setup/experiments/exp03-abort-responses/istio.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: go-app
spec:
  hosts:
  - go-app
  http:
  - route:
    - destination:
        host: go-app
        subset: primary
        port:
          number: 80

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: go-app
spec:
  host: go-app
  subsets:
  - name: primary
    labels:
      release: primary
